--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment Variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.*.local
+
+# Dependency directories
 node_modules
+
+# Build output
 dist
 dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
